--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vuetify": "^2.5.10",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -21,6 +22,6 @@
     "@vue/compiler-sfc": "^3.0.0",
     "sass": "^1.35.2",
     "sass-loader": "^10.2.0",
-    "vue-cli-plugin-vuetify": "~2.4.2"
+    "vue-cli-plugin-vuetify": "~2.4.3"
   }
 }
